--- a/Tyuiu.BazilevichAV.Sprint3.Task5.21/Tyuiu.BazilevichAV.Sprint3.Task5.V21.csproj
+++ b/Tyuiu.BazilevichAV.Sprint3.Task5.21/Tyuiu.BazilevichAV.Sprint3.Task5.V21.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.BazilevichAV.Sprint3.Task5.21.Lib\Tyuiu.BazilevichAV.Sprint3.Task5.21.Lib.csproj" />
+    <ProjectReference Include="..\Tyuiu.BazilevichAV.Sprint3.Task5.21.Lib\Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib.csproj" />
   </ItemGroup>
 
 </Project>
