--- a/Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib/Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib.csproj
+++ b/Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib/Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Tyuiu.BazilevichAV.Sprint3.Task5._21</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib\Tyuiu.BazilevichAV.Sprint3.Task5.V21.Lib.csproj" />
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
